# ScratchNN

./: .gitignore  CMakeLists.txt  README.md  dnntrainer.cpp  dnntrainer.h  idx.cpp  idx.h  inputneuron.cpp  inputneuron.h  main.cpp  neuron.cpp  neuron.h  quacktext.cpp  quacktext.h  stupiddnn.cpp  stupiddnn.h
